# rocm-jax-glog-fork

./: .dockerignore  .gitignore  .pylintrc  .shellcheckrc  .yamllint.yml  README.md  stack.py
.github/: CODEOWNERS
.github/workflows/: build-docker.yml  build-wheels.yml  ci.yml  lint.yml  nightly.yml  rocm-perf.yml  update-xla-hash.yml  upstream-ci-watcher.yml
.github/workflows/reusable/: build-docker.yml  build-wheels.yml
.glog/: glog-scan.sarif
ci/: Dockerfile.maxtext  pytest_ignores.txt  upload_test_to_db.py  upload_to_db.py  upstream_ci_watcher.py
docker/: Dockerfile.jax-ubu22  Dockerfile.jax-ubu24  Makefile
jax_rocm_plugin/: .bazelrc  .gitignore  Makefile  WORKSPACE
jax_rocm_plugin/jax_plugins/rocm/: plugin_setup.py
jax_rocm_plugin/jaxlib/: BUILD
jax_rocm_plugin/jaxlib/cpu/: BUILD
jax_rocm_plugin/jaxlib/gpu/: BUILD
jax_rocm_plugin/jaxlib/rocm/: BUILD
jax_rocm_plugin/jaxlib/tools/: BUILD.bazel  build_gpu_kernels_wheel.py  build_gpu_plugin_wheel.py
jax_rocm_plugin/jaxlib_ext/tools/: BUILD.bazel  build_gpu_kernels_wheel.py
jax_rocm_plugin/pjrt/: BUILD
jax_rocm_plugin/pjrt/python/: BUILD  __init__.py  version.py
jax_rocm_plugin/pjrt/tools/: BUILD.bazel  build_gpu_plugin_wheel.py
jax_rocm_plugin/tests/: test_plugin.py
tools/: blacken.sh  docker_dev_setup.sh  pylint.sh  shellcheck.sh  update_xla_hash.py  yamllint.sh
